# automata-utilities

./: README.md  setup.cfg
.github/workflows/: release.yml
.scripts/: release_indicator.py
coreutility/date/: NanoTimestamp.py  TimestampUtility.py
tests/coreutility/: date_utility_test.py
tests/coreutility/collection/: dictionary_utility_test.py
tests/coreutility/date/: NanoTimestamp_test.py  TimestampUtility_test.py
tests/coreutility/json/: json_utility_test.py
tests/coreutility/number/: BigFloatAdd_test.py  BigFloatSubtract_test.py
tests/coreutility/string/: string_utility_test.py
tests/utility/: date_utility_test.py  json_utility_test.py  string_utility_test.py
tests/utility/number/: BigFloatAdd_test.py  BigFloatSubtract_test.py
utility/: json_utility.py
