[metadata]
name = persuader.technology.automata.utilities
version = 0.0.4
description = Automata Utilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Persuader Technology
author_email = software@persuader.technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:

[options.packages.find]
include = utility*
exclude =
    tests
    simulations
    .scripts
